[package]
name = "tauri-plugin-store2"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-store2"
description = ""

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }

anyhow = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "macros"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-security = { workspace = true, features = ["SecBase", "SecKeychain"] }
security-framework = { workspace = true }

[dependencies]
tauri = { workspace = true, features = ["test"] }
tauri-plugin-settings = { workspace = true }
tauri-plugin-store = { workspace = true }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

hypr-storage = { workspace = true }
keyring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }
thiserror = { workspace = true }
