[package]
name = "tauri-plugin-hypr-tray"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-hypr-tray"
description = ""

[lib]
name = "tauri_plugin_tray"

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }

[dependencies]
hypr-host = { workspace = true }

tauri = { workspace = true, features = ["tray-icon", "image-png"] }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

tauri-plugin-clipboard-manager = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-misc = { workspace = true }
tauri-plugin-store2 = { workspace = true }
tauri-plugin-updater2 = { workspace = true }
tauri-plugin-windows = { workspace = true }

open = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
hypr-intercept = { workspace = true }
